--- a/alumni-mob/src/app/tab4/components/feedback-form-step4/feedback-form-step4.component.scss
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step4/feedback-form-step4.component.scss
@@ -1,6 +1,9 @@
 .feedback-form-bottom-toolbar {
     text-align: center;
+    font-weight: bold;
+    font-size: large;
 }
+
 .height {
     height: 60px;
 }
