--- a/alumni-mob/src/app/tab4/components/feedback-form-step5/feedback-form-step5.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step5/feedback-form-step5.component.html
@@ -26,5 +26,8 @@
     <ion-toolbar class="feedback-form-bottom-toolbar">
       <ion-button type="submit" [disabled]="feedbackMainContentForm.invalid" shape="round">Suivant <ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
     </ion-toolbar>
+    <ion-toolbar class="feedback-form-bottom-toolbar">
+      <ion-label>Étape 3/4</ion-label>
+    </ion-toolbar>
   </form>
 </ion-content>
