--- a/alumni-mob/src/app/tab4/components/feedback-form-step6/feedback-form-step6.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step6/feedback-form-step6.component.html
@@ -12,4 +12,7 @@
   <ion-toolbar class="feedback-form-bottom-toolbar">
     <ion-button (click)="finish()" [disabled]="!charterRespected" shape="round">Demander la publication par l'équipe de modération <ion-icon name="send-outline"></ion-icon></ion-button>
   </ion-toolbar>
+  <ion-toolbar class="feedback-form-bottom-toolbar">
+    <ion-label>Étape 4/4</ion-label>
+  </ion-toolbar>
 </ion-content>
