--- a/alumni-mob/src/app/tab4/components/feedback-form-step3/feedback-form-step3.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step3/feedback-form-step3.component.html
@@ -71,5 +71,8 @@
     <ion-toolbar class="feedback-form-bottom-toolbar">
       <ion-button type="submit" [disabled]="jobInfoForm.invalid" shape="round">Suivant <ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
     </ion-toolbar>
+    <ion-toolbar class="feedback-form-bottom-toolbar">
+      <ion-label>Étape 2/4</ion-label>
+    </ion-toolbar>
   </form>
 </ion-content>
