--- a/alumni-mob/src/app/tab4/components/feedback-form-step4/feedback-form-step4.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step4/feedback-form-step4.component.html
@@ -25,4 +25,7 @@
   <ion-toolbar class="feedback-form-bottom-toolbar">
     <ion-button (click)="next()" [disabled]="!charterAgreedTo" shape="round">Suivant <ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
   </ion-toolbar>
+  <ion-toolbar class="feedback-form-bottom-toolbar">
+    <ion-label>Étape 3/4</ion-label>
+  </ion-toolbar>
 </ion-content>
