--- a/alumni-mob/src/app/tab4/components/feedback-form-step2/feedback-form-step2.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step2/feedback-form-step2.component.html
@@ -1,8 +1,8 @@
 <app-feedback-form-header [isFirstStep]="false"></app-feedback-form-header>
-<ion-item>
-  <ion-label>Saisissez votre entreprise</ion-label>
-</ion-item>
+
 <ion-content class="ion-padding">
+  <div class="feedback-form-step-purpose"><h3>Créer une nouvelle entreprise</h3></div>
+  
   <form [formGroup]="form">
     <ion-item>
       <ion-label position="floating">Nom de l'entreprise</ion-label>
