--- a/alumni-mob/src/app/tab4/components/feedback-form-step4/feedback-form-step4.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step4/feedback-form-step4.component.html
@@ -1,9 +1,8 @@
 <app-feedback-form-header [isFirstStep]="false"></app-feedback-form-header>
-<ion-item>
-  <ion-label>La chartre : </ion-label>
-</ion-item>
 
 <ion-content class="ion-padding">
+  <div class="feedback-form-step-purpose"><h3>Charte</h3></div>
+
   <p>Vous allez maintenant pouvoir écrire votre retour d'expérience.</p>
   <p>Nous vous rappelons que le but de cet espace est de partager honnêtement nos connaissances, 
     entre personnes de la communauté Aelion/Unlearn, dans l'intérêt professionnel de chacun·e.
